2012-10-27  Michael Saboff  <msaboff@apple.com>

        Try to create AtomicString as 8 bit where possible
        https://bugs.webkit.org/show_bug.cgi?id=100575

        Reviewed by Oliver Hunt.

        Added StringImpl::create8BitIfPossible() that first tries to create an 8 bit string.  If it finds a 16 bit character
        during processing, it calls the standard create() method.  The assumption is that this will be used on mostly 8 bit
        strings and ones that are shorter (in the tens of characters).  Changed AtomicString to use the new creation method
        for UChar based construction.

        * wtf/text/AtomicString.cpp:
        (WTF::UCharBufferTranslator::translate):
        * wtf/text/StringImpl.cpp:
        (WTF::StringImpl::create8BitIfPossible):
        * wtf/text/StringImpl.h:
        (WTF::StringImpl::create8BitIfPossible):

2012-10-27  Michael Saboff  <msaboff@apple.com>

        String::fromUTF8() should take advantage of the ASCII check in convertUTF8ToUTF16()
        https://bugs.webkit.org/show_bug.cgi?id=100577

        Reviewed by Oliver Hunt.

        Passed is ASCII flag to convertUTF8ToUTF16() and if try, create an 8 bit string from the original arguments.

        * wtf/text/WTFString.cpp:
        (WTF::String::fromUTF8):

2012-10-27  Dan Bernstein  <mitz@apple.com>

        REAL_PLATFORM_NAME build setting is no longer needed
        https://bugs.webkit.org/show_bug.cgi?id=100587

        Reviewed by Mark Rowe.

        Removed the definition of REAL_PLATFORM_NAME and replaced references to it with references
        to PLATFORM_NAME.

        * Configurations/Base.xcconfig:
        * Configurations/CompilerVersion.xcconfig:
        * Configurations/DebugRelease.xcconfig:

2012-10-26  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r132689.
        http://trac.webkit.org/changeset/132689
        https://bugs.webkit.org/show_bug.cgi?id=100574
